tests/NormalTests/paczka1/small_fuzzy/21889576.err
Error in line 2: COgWksfR93 S915 92,3
Error in line 8: COgWksfR93 A850 92,2
